# qurcol

./: .flake8  .gitignore  CHANGELOG.md  README.md  mypy.ini  noxfile.py  pyproject.toml
src/qurcol/: __init__.py  cli.py  format.py  read.py  sql.py  table.py
tests/: conftest.py  test_cli.py  test_format.py  test_read.py  test_sql.py  test_table.py
